crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_Test_calling_a_funct…_(3b18271a821a59b).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Test calling a function whose type is vendored from `typeshed`
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | import json
2 | 
3 | json.loads(5)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `loads` is incorrect
 --> src/mdtest_snippet.py:3:12
  |
1 | import json
2 |
3 | json.loads(5)  # error: [invalid-argument-type]
  |            ^ Expected `str | bytes | bytearray`, found `Literal[5]`
  |
info: Function defined here
   --> stdlib/json/__init__.pyi:220:5
    |
218 |     """
219 |
220 | def loads(
    |     ^^^^^
221 |     s: str | bytes | bytearray,
    |     -------------------------- Parameter declared here
222 |     *,
223 |     cls: type[JSONDecoder] | None = None,
    |
info: rule `invalid-argument-type` is enabled by default

```
